--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,7 @@ jobs:
 
     - name: Run type checking with mypy
       if: matrix.python-version == '3.10'
-      run: uv run mypy --install-types --non-interactive --package nopin
+      run: uv run mypy src/
 
     - name: Run tests with pytest
       run: |
