--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ dependencies = [
     "uvicorn>=0.34.2",
     "streamlit>=1.45.1",
     "gradio>=5.29.1",
+    "tomli>=2.2.1",
 ]
 
 [project.optional-dependencies]
