--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,13 +2,13 @@ services:
   api:
     build: .
     container_name: nopin-api
-    ports:
-      - "8000:8000"
+    network_mode: host
     env_file: 
       - .env
     environment:
       - PYTHONPATH=/app/src
       - NOPIN_CONFIG=/app/configs/default.toml
+      - OLLAMA_HOST=http://host.docker.internal:11434
     command: uv run uvicorn nopin.api:app --host 0.0.0.0 --port 8000 --log-level debug
     restart: unless-stopped
     healthcheck:
